# padpeek

./: .gitignore  CMakeLists.txt  LICENSE
arduino/: serial.c  serial.h
arduino/snes/: serial.c  serial.h  snes.ino
cli/: padpeek  test_snes.rb
pico/: padpeek.c  shiftregister.pio
